# Iota

./: .cargo_toml_backup  .gitignore  Cargo.toml  README.md  dockerfile  web
.github/workflows/: build.yml
logs/: log_1771405721.txt  log_1771421284.txt  log_1771421408.txt  log_1771421600.txt  log_1771423051.txt  log_1771423595.txt  log_1771436282.txt  log_1771436538.txt  log_1771437605.txt  log_1771438219.txt  log_1771438233.txt  log_1771438242.txt
src/: main.rs
src/auth/: auth_connector.rs  auth_user.rs  crypto_helper.rs  local_auth.rs  mod.rs
src/communities/: community.rs  community_connection.rs  community_manager.rs  community_socket.rs  mod.rs
src/communities/interactables/: category.rs  interactable.rs  registry.rs  text_chat.rs  voice_chat.rs
src/communities/perms/: permission.rs
src/data/: communication.rs
src/eula/: eula_checker.rs  mod.rs  terms_checker.rs
src/gui/: app_state.rs  input_handler.rs  interaction_result.rs  log_panel.rs  mod.rs  nav_bar.rs  ratatui_interface.rs  settings_panel.rs  tui.rs  ui.rs
src/gui/elements/: console_card.rs  elements.rs  graph_card.rs  log_card.rs
src/gui/screens/: main_screen.rs  md_viewer.rs  screens.rs  terms_checker.rs  terms_updater.rs
src/gui/util/: borders.rs
src/gui/widgets/: betterblock.rs
src/langu/: language_creator.rs  language_manager.rs  mod.rs
src/omikron/: mod.rs  omikronConnection.rs  omikron_connection.rs  ping_pong_task.rs
src/server/: api.rs  mod.rs  server.rs  socket.rs  web_path_parser.rs
src/terms/: buttons.rs  consent_state.rs  doc.rs  focus.rs  md_viewer.rs  mod.rs  terms_checker.rs  terms_getter.rs  terms_updater.rs
src/users/: contact.rs  mod.rs  user_community_util.rs  user_manager.rs  user_profile.rs  user_profile_full.rs
src/util/: chatFiles.rs  chat_files.rs  chatsUtil.rs  chats_util.rs  communities_util.rs  configUtil.rs  config_util.rs  crypto_helper.rs  crypto_util.rs  db.rs  fileUtil.rs  file_util.rs  logger.rs  mod.rs
static/web/: 404.html  index.html
