[package]
name = "Iota"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "*"
axum = "*"
base64 = "0.22.1"
bytes = "*"
cmake = "*"
color-eyre = "*"
crossterm = "*"
der = "*"
futures = "*"
futures-util = "*"
hex = "*"
hkdf = "*"
hmac = "*"
hyper = { version = "*", features = ["full"] }
hyper-util = "*"
http-body-util = "*"
json = "*"
native-tls = { version = "*", default-features = false }
once_cell = "1.21.3"
pkcs8 = { version = "*", features = ["alloc"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom", "std"] }
ratatui = { version = "*", features = ["all-widgets"]}
reactive-rs = "*"
aws-lc-rs = "*"
reqwest = "0.12.23"
rustls = { version = "*", features = ["aws-lc-rs"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "*"
sys-info = "*"
sysinfo = "0.30"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tower = "*"
tungstenite = "*"
uuid = { version = "*", features = ["v4"] }
walkdir = "2.5.0"
warp = "*"
x448 = { version = "*" }
x509 = "*"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
async-trait = "0.1.89"
sha1 = "0.10.6"
